gke-dev/k8s-manifests/deployments/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-demo-v1
  name: api-demo-v1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: api-demo-service-v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api-demo-service-v1
    spec:
      containers:
      - image: gcr.io/kefeng-playground-369510/api-demo:node-v1
        imagePullPolicy: Always
        name: api-demo-v1
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        # startupProbe:
        #   httpGet:
        #     path: /healthz/startupProbe
        #     port: 8080
        #   initialDelaySeconds: 2
        #   successThreshold: 1
        #   failureThreshold: 30
        #   periodSeconds: 10
        # livenessProbe:
        #   httpGet:
        #     path: /healthz/livenessProbe
        #     port: 8080
        #   initialDelaySeconds: 2
        #   successThreshold: 1
        #   failureThreshold: 1
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /healthz/readinessProbe
        #     port: 8080
        #   successThreshold: 1
        #   failureThreshold: 5
        #   periodSeconds: 5
        #   timeoutSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
      # serviceAccountName: build-robot
      terminationGracePeriodSeconds: 30
