gke-dev/k8s-manifests/deployments/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-demo-v2
  name: api-demo-v2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: api-demo-service-v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api-demo-service-v2
    spec:
      containers:
      - image: gcr.io/kefeng-playground-369510/api-demo:node-v2
        imagePullPolicy: Always
        name: api-demo-v2
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        startupProbe:
          httpGet:
            path: /healthz/startupProbe
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 60
          successThreshold: 1
          failureThreshold: 5
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz/livenessProbe
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 60
          successThreshold: 1
          failureThreshold: 5
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz/readinessProbe
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 60
          successThreshold: 1
          failureThreshold: 5
          timeoutSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
      # serviceAccountName: build-robot
      terminationGracePeriodSeconds: 30
