gke-dev/k8s-manifests/deployments/ingress.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      # ingress.gcp.kubernetes.io/pre-shared-cert: demo-staging-8877ec3f
      # ingress.kubernetes.io/ssl-cert: demo-staging-8877ec3f
      kubernetes.io/ingress.allow-http: "true"
      kubernetes.io/ingress.class: gce
    name: api-demo-ingress
  spec:
    rules:
    - http:
        paths:
        - backend:
            service:
              name: api-demo-v3-service
              port:
                name: my-https
          path: /*
          pathType: ImplementationSpecific
        # - backend:
        #     service:
        #       name: api-demo-v3-service
        #       port:
        #         name: my-https
        #   path: /v6/*
        #   pathType: ImplementationSpecific
        # - backend:
        #     service:
        #       name: api-demo-v3-service
        #       port:
        #         name: my-https
        #   path: /v5/
        #   pathType: Prefix
        # - backend:
        #     service:
        #       name: api-demo-v3-service
        #       port:
        #         name: my-https
        #   path: /v4/*
        #   pathType: Prefix
        # - backend:
        #     service:
        #       name: api-demo-v3-service
        #       port:
        #         name: my-https
        #   path: /v3/*
        #   pathType: ImplementationSpecific
        # - backend:
        #     service:
        #       name: api-demo-v2-service
        #       port:
        #         name: my-https
        #   path: /v2/*
        #   pathType: ImplementationSpecific
        # - backend:
        #     service:
        #       name: api-demo-v1-remote-service
        #       port:
        #         number: 8080
        #   path: /v1/*
        #   pathType: ImplementationSpecific
